--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
         "vue-template-compiler": "^2.5.22"
     },
     "dependencies": {
-        "element-ui": "^2.5.4"
+        "element-ui": "^2.5.4",
+        "vue-router": "^3.0.2",
+        "vuex": "^3.1.0"
     }
 }
