--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,7 @@ LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
+DB_SLAVE_HOST=null
 DB_PORT=3306
 DB_DATABASE=homestead
 DB_USERNAME=homestead
@@ -37,3 +38,4 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
