--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     },
     "dependencies": {
         "element-ui": "^2.5.4",
+        "json-server": "^0.14.2",
         "moment": "^2.24.0",
         "vue-router": "^3.0.2",
         "vuex": "^3.1.0"
