--- a/.env.example
+++ b/.env.example
@@ -7,8 +7,8 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_SLAVE_HOST=null
+DB_HOST_WRITE=127.0.0.1
+DB_HOST_READ=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=homestead
 DB_USERNAME=homestead
