--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "element-ui": "^2.5.4",
         "json-server": "^0.14.2",
         "moment": "^2.24.0",
+        "normalize.css": "^8.0.1",
         "vue-router": "^3.0.2",
         "vuex": "^3.1.0"
     }
