--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     },
     "dependencies": {
         "element-ui": "^2.5.4",
+        "js-cookie": "^2.2.0",
         "json-server": "^0.14.2",
         "moment": "^2.24.0",
         "normalize.css": "^8.0.1",
