--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
         "vue-template-compiler": "^2.5.22"
     },
     "dependencies": {
-        "element-ui": "^2.5.4",
+        "element-ui": "^2.6.1",
         "js-cookie": "^2.2.0",
         "json-server": "^0.14.2",
         "moment": "^2.24.0",
         "normalize.css": "^8.0.1",
+        "vee-validate": "^2.2.0",
         "vue-router": "^3.0.2",
         "vuex": "^3.1.0"
     }
